--- a/bio.html
+++ b/bio.html
@@ -5,6 +5,8 @@
     <title>Biography</title>
   </head>
   <body>
-
+    <h1>A Long Journey</h1>
+    <h2>First Half</h2>
+    <h2>The Rest...</h2>
   </body>
 </html>
