--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Biography</title>
+  <title>biography</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
