--- a/bio.html
+++ b/bio.html
@@ -9,9 +9,41 @@
 </head>
 
 <body>
-  <h1>A Long Journey</h1>
-  <h2>First Half</h2>
-  <h2>The Rest...</h2>
-</body>
+  <div class="textwrap">
+    <h1>A Long Journey</h1>
+
+    <p>Ahmet Armanc Keser was born in an Eastern
+      Turkey city, Van, in a time of political
+      disturbence, 1998. His parents Ümit and
+      Derya, who are both from Van, decided to
+      give him an unusual name at the time.
+      <br>Armanc, in Kurdish, means "life purpose",
+      and as he was born to the first generation
+      of people who could have Kurdish names,
+      they wanted to signify that.
+      His father, Kurdish descent from Adilcevaz,
+      Bitlis, is a topographical engineer,
+      whereas his mother, Turkish, is a
+      construction technican. Until 2011 they lived
+      where they were born.
+      <br>On October 23rd, 2011, a magnitude 7.2
+      earthquake hit Van. Losing his home, Armanc
+      and his family moved to the West as his
+      enterance exam for high school was that
+      same year.
+      <br>After not going to school for more than a
+      whole month, he managed to get into the
+      best school in Turkey, American Robert College.
+      In Robert College he found his passion
+      towards human psychology and computer science.
+      After finishing high-school he was accepted
+      to Tufts University with full financial aid.
+      This is where he found out his interest
+      towards cognitive and brain sciences.
+      He is now pursuing a career in research for both
+      computer science and cognitive and behavior sciences.
+     </p>
+  </div>
+  </body>
 
 </html>
