--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale = 1.0" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Biography</title>
+  <a href="index.html" ><img id = backbutton src="images/backbutton.png" alt="Back Button"></a>
 </head>
 
 <body>
